Fix input color in green theme

--- a/default/theme/green/additional.css
+++ b/default/theme/green/additional.css
@@ -3,6 +3,7 @@ body, table, .item, #txtClock, input {
 	font-family: courier;
 	font-size: 14pt;
 	background-color: $colorBackground;
+	color: $colorText;
 }
 .dialog {
 	border: 3pt double $colorTitlebar;
