sketch of top menu being in a fixed position...

--- a/default/template/css/dragging.css
+++ b/default/template/css/dragging.css
@@ -10,4 +10,12 @@ form {
 	display: inline;
 }
 
+/*
+#topmenu.dialog {
+	position: fixed !important;
+	top: 0;
+	right: 0;
+}
+*/
+
 /* / dragging.css */
