remove inline-block from fieldset tag and add search keywords

--- a/default/template/css/dragging.css
+++ b/default/template/css/dragging.css
@@ -2,7 +2,8 @@
 
 /* should be called inline-block.css ? */
 
-fieldset, table.dialog {
+/*fieldset,*/
+table.dialog { /* inline-table table-block */
 	display: inline-block;
 	vertical-align: top;
 }
