improve dragging.css

--- a/default/template/css/dragging.css
+++ b/default/template/css/dragging.css
@@ -2,12 +2,11 @@
 
 /* should be called inline-block.css ? */
 
-/* #bug makes some dialogs horizontal
+/* makes some dialogs horizontal */
 fieldset {
 	display: inline-block;
 	vertical-align: top;
 }
- */
 
 table.dialog { /* inline-table table-block */
 	display: inline-block;
